@@ -12,7 +12,7 @@
 	<artifactId>com.dubture.symfony.test</artifactId>
 	<packaging>eclipse-test-plugin</packaging>
 	<properties>
-		<test.vmargs>-Xmx512m -XX:MaxPermSize=256m</test.vmargs>
+		<test.vmargs>-Xmx512m</test.vmargs>
 	</properties>
 	<build>
 		<plugins>
